--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-  <title>PASIYA 𝐌𝙳 𝐅𝚁𝙴𝙴 𝐁𝙾𝚃</title>
+  <title>LOKU RIKO 𝐌𝙸𝙽𝙸 𝐅𝚁𝙴𝙴 𝐁𝙾𝚃 𝐕2</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
   <style>
     body {
@@ -188,8 +188,8 @@
     <div class="box" id="box">
       <div id="text">
         <i class="fa fa-user" style="color:#00ffff;"></i>
-        <h3> 𝐒𝐎𝐋𝐎 𝐋𝐄𝐕𝐄𝐋𝐈𝐍𝐆 𝐁𝐘 𝐋𝐎𝐃 𝐅𝐑𝐄𝐄 𝐁𝐎𝐓 </h3>
-        <h6> 𝙲𝚁𝙴𝙰𝚃𝙴 𝙱𝚈 𝙳𝙸𝙽𝚄 & 𝙳 𝚁𝚄𝙺𝙰 </h6>
+        <h3>𝐋𝐎𝐊𝐔 𝐑𝐈𝐍𝐎 𝐌𝐈𝐍𝐈 𝐁𝐘 𝐋𝐎𝐃 𝐅𝐑𝐄𝐄 𝐁𝐎𝐓 𝐕2 </h3>
+        <h6> 𝙲𝚁𝙴𝙰𝚃𝙴 𝙱𝚈 𝙲𝚈𝙱𝙰𝚁 𝙻𝙾𝙺𝚄 𝚁𝙸𝙺𝙾 </h6>
         <h6>🔢 Enter your number with country code</h6>
 
         <div class="input-container">
