--- a/lib/main.html
+++ b/lib/main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>POWERED_BUY Pasiya-md MINI BOT</title>
+  <title>POWERED_BUY LOKU RIKO MINI BOT V2</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
   <style>
     :root {
@@ -312,10 +312,10 @@
       <h1 class="title">pasiya-md Pair</h1>
       <p class="subtitle">Generate your WhatsApp pair code</p>
       <div class="social-icons">
-        <a href="https://www.youtube.com/@pasiyaTech" target="_blank" class="youtube"><i class="fab fa-youtube"></i></a>
-        <a href="https://github.com/pakaya/hsh-MD" target="_blank" class="telegram"><i class="fab fa-github"></i></a>
-        <a href="https://whatsapp.com/channel/0029VahMZasD8SE5GRwzqn3Z" target="_blank" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
-        <a href="https://github.com/pakaya/hsh-MD" target="_blank" class="github"><i class="fab fa-github"></i></a>
+        <a href="https://youtube.com/@oshadhanilaweera" target="_blank" class="youtube"><i class="fab fa-youtube"></i></a>
+        <a href="https://github.com/lokuriko/RIKO-MINI-BOT-V.0.2.git" target="_blank" class="telegram"><i class="fab fa-github"></i></a>
+        <a href="https://whatsapp.com/channel/0029Vb6lrYUFSAtAzunSgP0X" target="_blank" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://whatsapp.com/channel/0029Vb6lrYUFSAtAzunSgP0X" target="_blank" class="github"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
@@ -577,7 +577,7 @@
     </button>
 
     <div class="footer">
-      <p>© 2025 PASIYA OFFICIAL | PASIYA-MD</p>
+      <p>©2025 LOKU RIKO MINI BOT V2</p>
     </div>
   </div>
 
